--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,12 +1,9 @@
 navbar_entries:
-  - title: about
-    url: about
-
   - title: blog
     url: blog
 
-  - title: website
-    url: https://www.abhinav.co
+  - title: game
+    url: https://cuberacers.com
 
 project_entries:
   - title: Project 1
