--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: CubeRacers Blog
 author: Reuben Schiopu
-url: https://blog.cuberacers.com/ # root address of the site
+url: https://blog.cuberacers.com # root address of the site
 description: > # description of the site (multiple lines allowed)
   All things regarding the development of my game CubeRacers
 
